Fix top spacing on header

--- a/src/client/main/main.scss
+++ b/src/client/main/main.scss
@@ -7,3 +7,11 @@
     margin-bottom: 1.2rem;
   }
 }
+
+@media (max-width: 425px) {
+  header {
+    &.section {
+      padding: 3rem 0 7rem;
+    }
+  }
+}
